# tzap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
Formula/: tzap.rb
crates/tzap-cli/: Cargo.toml  README.md
crates/tzap-cli/src/: main.rs  plaintext_spool.rs
crates/tzap-cli/tests/: cli_smoke.rs  crates_io_metadata.rs  milestone10_workflows.rs  milestone11_docs.rs  milestone12_crates_io.rs  public_docs.rs  release_workflows.rs
crates/tzap-core/: Cargo.toml  README.md
crates/tzap-core/src/: compression.rs  crypto.rs  entry_metadata.rs  fec.rs  format.rs  lib.rs  metadata.rs  non_seekable_reader.rs  padding.rs  raw_stream_profile.rs  reader.rs  root_auth.rs  signing.rs  streaming_volume_distributor.rs  streaming_writer.rs  tar_model.rs  wire.rs  writer.rs
crates/tzap-core/tests/: v36_corpus.rs
crates/tzap-plugin-keywrap/: Cargo.toml  README.md
crates/tzap-plugin-keywrap/src/: lib.rs
crates/tzap-plugin-signing/: Cargo.toml  README.md
crates/tzap-plugin-signing/src/: ed25519_raw.rs  lib.rs  x509_chain.rs
docs/: tzap-cli-reference.md  tzap-cli-ux-production-readiness-plan.md  tzap-operational-boundaries.md  tzap-v36-conformance-matrix.md  tzap-v36-corpus-tracker.md  tzap-v36-deferred-corpus-backlog.md  tzap-v36-gap-implementation-plan.md  tzap-v36-implementation-plan.md  tzap-v36-release-gate.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/: manifest.tsv
fuzz/fuzz_targets/: fuzz_smoke.rs  parse_compressed_and_padding.rs  parse_compressed_support.rs  parse_fixed_structures.rs  parse_fixed_support.rs  parse_metadata.rs  parse_metadata_support.rs  seeds.rs  support.rs
implmentation-docs/traceability/: README.md  signing-plugin-traceability.md  v41-core-traceability.md  verification-runbook.md
public-docs/: tzap-benchmark-guide.md  tzap-benchmark-results.md  tzap-cli-reference.md  tzap-development.md  tzap-installation.md  tzap-operational-boundaries.md  tzap-recovery-matrix.md  tzap-security-model.md
public-docs/traceability/: README.md  signing-plugin-traceability.md  v43-core-traceability.md  verification-runbook.md
reports/: tzap-benchmark-marketing-readout.md
scripts/: provision-windows-refs-test-volume.ps1  run-windows-test-elevated.ps1  tzap_benchmark.py
specs/: tzap-format-revisedv18.md  tzap-format-revisedv19.md  tzap-format-revisedv20.md  tzap-format-revisedv21.md  tzap-format-revisedv22.md  tzap-format-revisedv23.md  tzap-format-revisedv24.md  tzap-format-revisedv25.md  tzap-format-revisedv26.md  tzap-format-revisedv27.md  tzap-format-revisedv28.md  tzap-format-revisedv29.md  tzap-format-revisedv30.md  tzap-format-revisedv31.md  tzap-format-revisedv32.md  tzap-format-revisedv33.md  tzap-format-revisedv34.md  tzap-format-revisedv35.md  tzap-format-revisedv36.md  tzap-format-revisedv37.md  tzap-format-revisedv41.md  tzap-format-revisedv42.md  tzap-format-revisedv43.md  tzap-format-revisedv44.md  tzap-format-revisedv45.md
specs/plugin/: tzap-plugin-keywrap-v1-proposed-v44.md  tzap-plugin-keywrap-v1-proposed-v45.md  tzap-plugin-signing-v5-proposed-v43.md  tzap-plugin-signing-v6-proposed-v44.md  tzap-plugin-signing-v6-proposed-v45.md  tzap-plugin-x509-chain-v1-proposed-v43.md  tzap-plugin-x509-chain-v2-proposed-v44.md  tzap-plugin-x509-chain-v2-proposed-v45.md
