[workspace]
members = [
    "crates/tzap-cli",
    "crates/tzap-core",
    "crates/tzap-plugin-signing",
    "crates/tzap-plugin-keywrap",
]
resolver = "2"

[workspace.package]
authors = ["Frank Zhu"]
description = "Rust reference implementation of the tzap archive format specification"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/tzap-org/tzap"
keywords = ["archive", "compression", "encryption", "recovery", "zstd"]
categories = ["compression", "cryptography", "filesystem"]
documentation = "https://github.com/tzap-org/tzap/blob/main/specs/tzap-format-revisedv43.md"
readme = "README.md"

[workspace.dependencies]
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
zstd = { version = "0.13", features = ["zstdmt"] }
zstd-safe = "7"
serde_json = "1"

[workspace.dependencies.assert_cmd]
version = "2"

[workspace.dependencies.predicates]
version = "3"

[workspace.dependencies.tempfile]
version = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
