[package]
name = "tzap-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = []
libfuzzer = ["dep:libfuzzer-sys"]

[dependencies]
libfuzzer-sys = { version = "0.4", optional = true }
tzap-core = { path = "../crates/tzap-core" }
tzap-plugin-signing = { path = "../crates/tzap-plugin-signing" }

[workspace]
members = ["."]

[[bin]]
name = "parse_fixed_structures"
path = "fuzz_targets/parse_fixed_structures.rs"
test = false
doc = false
bench = false
required-features = ["libfuzzer"]

[[bin]]
name = "parse_metadata"
path = "fuzz_targets/parse_metadata.rs"
test = false
doc = false
bench = false
required-features = ["libfuzzer"]

[[bin]]
name = "parse_compressed_and_padding"
path = "fuzz_targets/parse_compressed_and_padding.rs"
test = false
doc = false
bench = false
required-features = ["libfuzzer"]

[[bin]]
name = "fuzz_smoke"
path = "fuzz_targets/fuzz_smoke.rs"
test = false
doc = false
bench = false
