[package]
name = "tzap"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Fast encrypted archive CLI with built-in recovery and safe restores"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap"
readme = "README.md"
keywords = ["archive", "backup", "encryption", "recovery", "zstd"]
categories = ["command-line-utilities", "compression", "cryptography", "filesystem"]

[[bin]]
name = "tzap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde_json.workspace = true
rpassword = "7"
tempfile.workspace = true
time.workspace = true
tzap-core = { path = "../tzap-core", version = "0.1.6" }
tzap-plugin-signing = { path = "../tzap-plugin-signing", version = "0.1.5" }

[dev-dependencies]
assert_cmd.workspace = true
openssl.workspace = true
predicates.workspace = true
