[package]
name = "tzap"
version = "0.1.10"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Fast encrypted archive CLI with built-in recovery and safe restores"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap"
readme = "README.md"
keywords = ["archive", "backup", "encryption", "recovery", "zstd"]
categories = ["command-line-utilities", "compression", "cryptography", "filesystem"]

[[bin]]
name = "tzap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
memmap2.workspace = true
rand.workspace = true
serde_json.workspace = true
sha2.workspace = true
openssl.workspace = true
rpassword = "7"
tempfile.workspace = true
time.workspace = true
tzap-core = { path = "../tzap-core", version = "0.1.10" }
tzap-plugin-keywrap = { path = "../tzap-plugin-keywrap", version = "0.1.10" }
tzap-plugin-signing = { path = "../tzap-plugin-signing", version = "0.1.10" }

[target.'cfg(unix)'.dependencies]
xattr.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
