[package]
name = "tzap-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core library for reading and writing encrypted, recoverable tzap archives"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap-core"
readme = "README.md"
keywords = ["archive", "compression", "encryption", "recovery", "zstd"]
categories = ["compression", "cryptography", "filesystem"]

[dependencies]
aes-gcm.workspace = true
aes-gcm-siv.workspace = true
argon2.workspace = true
byteorder.workspace = true
chacha20poly1305.workspace = true
crc32c.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
rand.workspace = true
sha2.workspace = true
subtle.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zeroize.workspace = true
zstd.workspace = true
zstd-safe.workspace = true

[dev-dependencies]
tempfile.workspace = true
