[package]
name = "tzap-core"
version = "0.1.10"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core library for reading and writing encrypted, recoverable tzap archives"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap-core"
readme = "README.md"
keywords = ["archive", "compression", "encryption", "recovery", "zstd"]
categories = ["compression", "cryptography", "filesystem"]

[dependencies]
aes-gcm.workspace = true
aes-gcm-siv.workspace = true
argon2.workspace = true
cap-fs-ext.workspace = true
cap-std.workspace = true
chacha20poly1305.workspace = true
crc32c.workspace = true
hkdf.workspace = true
hmac.workspace = true
libc.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zeroize.workspace = true
zstd.workspace = true
zstd-safe.workspace = true

[target.'cfg(not(windows))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(unix)'.dependencies]
xattr.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
hex.workspace = true
tempfile.workspace = true
