[package]
name = "tzap-plugin-keywrap"
version = "0.1.7"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Key-wrap recipient profile stubs for tzap v44"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap-plugin-keywrap"
readme = "README.md"
keywords = ["archive", "cryptography", "tzap", "keywrap", "recipient"]
categories = ["cryptography"]

[dependencies]
tzap-core = { path = "../tzap-core", version = "0.1.7" }
