[package]
name = "tzap-plugin-keywrap"
version = "0.1.9"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HPKE key-wrap recipient profiles for tzap v44"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap-plugin-keywrap"
readme = "README.md"
keywords = ["archive", "cryptography", "tzap", "keywrap", "recipient"]
categories = ["cryptography"]

[dependencies]
tzap-core = { path = "../tzap-core", version = "0.1.9" }
hpke = { workspace = true }
openssl = { workspace = true }
rand_core = { version = "0.9", features = ["os_rng"] }
sha2 = { workspace = true }
x509-parser.workspace = true
