[package]
name = "tzap-plugin-signing"
version = "0.1.12"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Signing profiles for tzap RootAuth"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tzap-plugin-signing"
readme = "README.md"
keywords = ["archive", "cryptography", "ed25519", "signing", "tzap"]
categories = ["cryptography"]

[dependencies]
ed25519-dalek.workspace = true
openssl.workspace = true
sha2.workspace = true
tzap-core = { path = "../tzap-core", version = "0.1.12" }
x509-parser.workspace = true

[target.'cfg(not(windows))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[dev-dependencies]
rand.workspace = true
